[project]
name = "nonebot-plugin-extrautils"
version = "0.2.1"
description = "Extra utility functions for easier development with nonebot2"
authors = [
    {name = "HivertMoZara", email = "worldmozara@163.com"},
]
license = {text = "MIT"}
dependencies = ["nonebot2>=2.0.0b1", "nonebot-adapter-onebot>=2.1", "httpx>=0.23"]
requires-python = ">=3.8"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/NCBM/nonebot-plugin-extrautils"
Repository = "https://github.com/NCBM/nonebot-plugin-extrautils"
